--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,4 +1,4 @@
 <!--  Scripts-->                                                                               
-<script src="{{ "assets/js/jquery.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "assets/js/materialize.min.js" | prepend: site.baseurl}}"></script>
-<script src="{{ "assets/js/init.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "assets/js/jquery.min.js" | relative_url }}"></script>
+<script src="{{ "assets/js/materialize.min.js" | relative_url }}"></script>
+<script src="{{ "assets/js/init.js" | relative_url }}"></script>
