--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <nav class="black yellow-text" role="navigation">
     <div class="nav-wrapper container">
-        <a id="logo-container" class="yellow-text" style="font-size: large" href="{{ "/" | relative_url }}">{{site.title | upcase}}</a>
+        <a id="logo-container" class="yellow-text" style="font-size: large" href="{{ "/" | relative_url }}">
+        <img src="favicon.png" style="height: 50%;"/> {{site.title | upcase}} </a>
         <a id="logo-container1" class=" yellow-text" href="{{ "/" | relative_url }}">{{site.subtitle}}</a>
         {% assign default_paths = site.pages | map: "path" %}
         {% assign page_paths = site.header_pages | default: default_paths %}
@@ -18,7 +19,7 @@
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
-            <li><a class="yellow-text" href="#">Home</a></li>
+            <li><a class="yellow-text" href="{{/ | relative_url}}">Inicio</a></li>
             {% if page_paths %}
             {% for path in page_paths %}
             {% assign my_page = site.pages | where: "path", path | first %}
