--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
 {% include header.html %}
 
-<main style="background-image: url('/assets/background.jpg')">
+<main class="back">
     {{ content }}
 </main>
 
@@ -16,5 +16,16 @@
 {% include script.html %}
 
 </body>
+
+<style>
+    .back{
+        background-image: url('/assets/18989.jpeg');
+        background-repeat: repeat-y;
+        background-color: black;
+        background-size: 20%;
+    }
+
+</style>
+
 
 </html>
