removido telefone junior

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         <h4 class="center">Contato</h4>
         <div class="row">
 
-            <div class="col s12 m6">
+            <div class="col">
                 <div class="icon-block ">
                     <p> <i class="material-icons large">contacts</i> Vanderson Choptian </p>
                     <p> <i class="material-icons large">contact_phone</i> +55 (44) 9 9769-6806 </p>
@@ -12,13 +12,13 @@
                 </div>
             </div>
 
-            <div class="col s12 m6">
-                <div class="icon-block ">
-                    <p> <i class="material-icons large">contacts</i> Junior Melgarejo </p>
-                    <p> <i class="material-icons large">contact_phone</i> +55 (44) 9 9914-1479 </p>
-                    <p> <i class="material-icons large">contact_mail</i> junior.97760401@gmail.com </p>
-                </div>
-            </div>
+<!--            <div class="col s12 m6">-->
+<!--                <div class="icon-block ">-->
+<!--                    <p> <i class="material-icons large">contacts</i> Junior Melgarejo </p>-->
+<!--                    <p> <i class="material-icons large">contact_phone</i> +55 (44) 9 9914-1479 </p>-->
+<!--                    <p> <i class="material-icons large">contact_mail</i> junior.97760401@gmail.com </p>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
         <div class="footer-copyright">
             <div class="container">
