--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
 
             <div class="col s12 m6">
                 <div class="icon-block ">
-                    <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+                    <h2 class="center yellow-text"><i class="material-icons">group</i></h2>
                     <h5 class="center">Profissional</h5>
 
                     <p class="light">Nossos profissionais possuem vasta experiencia no segmento de demarcação viária e
@@ -51,29 +51,29 @@ layout: default
 
             <div class="col s12 m6">
                 <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+                    <h2 class="center yellow-text"><i class="material-icons">settings</i></h2>
                     <h5 class="center">Serviços</h5>
 
                     <p class="light">
                     <ul>
-                        <li><i class="small material-icons green-text">check_circle</i> Pinturas de pisos industriais e
+                        <li><i class="medium material-icons yellow-text">check</i> Pinturas de pisos industriais e
                             de garagens
                         </li>
-                        <li><i class="small material-icons green-text">check_circle</i> Pinturas de faixas de
+                        <li><i class="medium material-icons yellow-text">check</i> Pinturas de faixas de
                             sinalização
                         </li>
-                        <li><i class="small material-icons green-text">check_circle</i> Pinturas de vagas de garagem;
+                        <li><i class="medium material-icons yellow-text">check</i> Pinturas de vagas de garagem;
                         </li>
-                        <li><i class="small material-icons green-text">check_circle</i> Quadras poliesportivas (oficiais
+                        <li><i class="medium material-icons yellow-text">check</i> Quadras poliesportivas (oficiais
                             e não oficiais);
                         </li>
-                        <li><i class="small material-icons green-text">check_circle</i> Demarcações que exigem precisão
+                        <li><i class="medium material-icons yellow-text">check</i> Demarcações que exigem precisão
                             de projeto ( helipontos, sinalizações, detalhes
                             arquitetônicos);
                         </li>
-                        <li><i class="small material-icons green-text">check_circle</i> Pinturas em geral;</li>
-                        <li><i class="small material-icons green-text">check_circle</i> Projetos de sinalização;</li>
-                        <li><i class="small material-icons green-text">check_circle</i> Limpeza e preparação de
+                        <li><i class="medium material-icons yellow-text">check</i> Pinturas em geral;</li>
+                        <li><i class="medium material-icons yellow-text">check</i> Projetos de sinalização;</li>
+                        <li><i class="medium material-icons yellow-text">check</i> Limpeza e preparação de
                             superfícies.
                         </li>
                     </ul>
